# gofr-doc

./: .dockerignore  .gitignore  AUTH_INFRASTRUCTURE.md  COMPLETE_AUTH_INFRASTRUCTURE.md  PROJECT_SPEC.md  README.md  STORAGE_MANAGER_REFACTOR_PLAN.md  pyproject.toml  pyrightconfig.json  readme.md  report.html  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
app/: config.py  config_docs.py  housekeeper.py  main_mcp.py  main_mcpo.py  main_web.py  mcp_server.py  registry_base.py  web_server.py
app/auth/: __init__.py  service.py
app/content/: readme.md
app/errors/: __init__.py  mapper.py
app/exceptions/: __init__.py  base.py  fragment.py  group.py  invalid_group.py  (+3 more)
config/: gofr_approles.json  mcpo-config.json
docker/: Dockerfile.dev  Dockerfile.n8n  Dockerfile.openwebui  Dockerfile.prod  build-base.sh  build-dev.sh  build-n8n.sh  build-prod.sh  compose.dev.yml  compose.prod.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint-prod.sh  run-dev.sh  run-n8n.sh  run-openwebui.sh  run-prod.sh  start-prod.sh  stop-prod.sh
docs/: AUTHENTICATION.md  BOOTSTRAP_IMPLEMENTATION.md  DATA_PERSISTENCE.md  DATA_STORAGE_USAGE.md  DEVELOPMENT.md  DOCKER.md  DOCUMENT_GENERATION.md  FEATURES.md  FRAGMENT_REGISTRY_DESIGN.md  FUNCTIONAL_CLARIFICATION.md  GROUPS.md  GROUPS_ARCHITECTURE_PROPOSAL.md  IMAGE_FRAGMENT_DESIGN.md  INDEX.md  INTEGRATIONS.md  MCPO_INTEGRATION.md  N8N_INTEGRATION.md  N8N_MCP_SETUP.md  N8N_TROUBLESHOOTING.md  PROJECT_IMPROVEMENT_GUIDE.md  PROJECT_SPEC.md  PROXY_MODE.md  README_N8N_MCP.md  RENDERING_README.md  SESSION_ALIASING_IMPLEMENTATION.md  TABLE_FRAGMENT_DESIGN.md  TABLE_FRAGMENT_GUIDE.md  TABLE_FRAGMENT_IMPLEMENTATION_PLAN.md  TEST_SERVER_AUTH_SETUP.md  authentication.md  bootstrap_implementation.md  data_persistence.md  development.md  docker.md  document_generation.md  features.md  gofr-plot-migration-plan-review.md  gofr-plot-migration-plan.md  gofr_iq_auth_upgrade_guide.md  housekeeper.md  (+15 more)
logs/: doco_tokens.json  gofr-doc_tokens.json
scripts/: bootstrap_gofr_doc.sh  debug_mcpo.sh  doco.env  ensure_approle.sh  gofr-doc.env  mcpo_wrapper.sh  migrate_secrets_to_volume.sh  project.env  project.env.example  publish-doc-templates.sh  render_manager.py  render_manager.sh  restart_servers.sh  restore_backup.sh  run-dev-container.sh  run_mcp.sh  run_mcp_auth.sh  run_mcpo.sh  run_tests.sh  run_web.sh  run_web_auth.sh  start-test-env.sh  start_all_servers.sh  stop_all_servers.sh  storage_manager.py  storage_manager.sh  test_mcpo_tools.sh  token_manager.py  token_manager.sh
test/: auth_helpers.py  conftest.py  test_code_quality.py  test_server_manager.py
tmp/: doc1.md  doc2.md  migration_plan.md
(+232 files in other folders)
